--- a/notebooks/lab3.ipynb
+++ b/notebooks/lab3.ipynb
@@ -19,12 +19,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "\n",
-    "import numpy as np\n",
+    "%load_ext autoreload\r\n",
+    "%autoreload 2\r\n",
+    "\r\n",
+    "import numpy as np\r\n",
     "from lab2.utils import get_random_number_generator"
    ],
    "outputs": [],
@@ -32,13 +32,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "source": [
-    "my_array = np.array([0])\n",
-    "print(type(my_array))\n",
+    "my_array = np.array([0])\r\n",
+    "print(type(my_array))\r\n",
     "dir(np.ndarray)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "<class 'numpy.ndarray'>\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['T',\n",
+       " '__abs__',\n",
+       " '__add__',\n",
+       " '__and__',\n",
+       " '__array__',\n",
+       " '__array_finalize__',\n",
+       " '__array_function__',\n",
+       " '__array_interface__',\n",
+       " '__array_prepare__',\n",
+       " '__array_priority__',\n",
+       " '__array_struct__',\n",
+       " '__array_ufunc__',\n",
+       " '__array_wrap__',\n",
+       " '__bool__',\n",
+       " '__class__',\n",
+       " '__complex__',\n",
+       " '__contains__',\n",
+       " '__copy__',\n",
+       " '__deepcopy__',\n",
+       " '__delattr__',\n",
+       " '__delitem__',\n",
+       " '__dir__',\n",
+       " '__divmod__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__float__',\n",
+       " '__floordiv__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getitem__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__iadd__',\n",
+       " '__iand__',\n",
+       " '__ifloordiv__',\n",
+       " '__ilshift__',\n",
+       " '__imatmul__',\n",
+       " '__imod__',\n",
+       " '__imul__',\n",
+       " '__index__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__int__',\n",
+       " '__invert__',\n",
+       " '__ior__',\n",
+       " '__ipow__',\n",
+       " '__irshift__',\n",
+       " '__isub__',\n",
+       " '__iter__',\n",
+       " '__itruediv__',\n",
+       " '__ixor__',\n",
+       " '__le__',\n",
+       " '__len__',\n",
+       " '__lshift__',\n",
+       " '__lt__',\n",
+       " '__matmul__',\n",
+       " '__mod__',\n",
+       " '__mul__',\n",
+       " '__ne__',\n",
+       " '__neg__',\n",
+       " '__new__',\n",
+       " '__or__',\n",
+       " '__pos__',\n",
+       " '__pow__',\n",
+       " '__radd__',\n",
+       " '__rand__',\n",
+       " '__rdivmod__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__rfloordiv__',\n",
+       " '__rlshift__',\n",
+       " '__rmatmul__',\n",
+       " '__rmod__',\n",
+       " '__rmul__',\n",
+       " '__ror__',\n",
+       " '__rpow__',\n",
+       " '__rrshift__',\n",
+       " '__rshift__',\n",
+       " '__rsub__',\n",
+       " '__rtruediv__',\n",
+       " '__rxor__',\n",
+       " '__setattr__',\n",
+       " '__setitem__',\n",
+       " '__setstate__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__sub__',\n",
+       " '__subclasshook__',\n",
+       " '__truediv__',\n",
+       " '__xor__',\n",
+       " 'all',\n",
+       " 'any',\n",
+       " 'argmax',\n",
+       " 'argmin',\n",
+       " 'argpartition',\n",
+       " 'argsort',\n",
+       " 'astype',\n",
+       " 'base',\n",
+       " 'byteswap',\n",
+       " 'choose',\n",
+       " 'clip',\n",
+       " 'compress',\n",
+       " 'conj',\n",
+       " 'conjugate',\n",
+       " 'copy',\n",
+       " 'ctypes',\n",
+       " 'cumprod',\n",
+       " 'cumsum',\n",
+       " 'data',\n",
+       " 'diagonal',\n",
+       " 'dot',\n",
+       " 'dtype',\n",
+       " 'dump',\n",
+       " 'dumps',\n",
+       " 'fill',\n",
+       " 'flags',\n",
+       " 'flat',\n",
+       " 'flatten',\n",
+       " 'getfield',\n",
+       " 'imag',\n",
+       " 'item',\n",
+       " 'itemset',\n",
+       " 'itemsize',\n",
+       " 'max',\n",
+       " 'mean',\n",
+       " 'min',\n",
+       " 'nbytes',\n",
+       " 'ndim',\n",
+       " 'newbyteorder',\n",
+       " 'nonzero',\n",
+       " 'partition',\n",
+       " 'prod',\n",
+       " 'ptp',\n",
+       " 'put',\n",
+       " 'ravel',\n",
+       " 'real',\n",
+       " 'repeat',\n",
+       " 'reshape',\n",
+       " 'resize',\n",
+       " 'round',\n",
+       " 'searchsorted',\n",
+       " 'setfield',\n",
+       " 'setflags',\n",
+       " 'shape',\n",
+       " 'size',\n",
+       " 'sort',\n",
+       " 'squeeze',\n",
+       " 'std',\n",
+       " 'strides',\n",
+       " 'sum',\n",
+       " 'swapaxes',\n",
+       " 'take',\n",
+       " 'tobytes',\n",
+       " 'tofile',\n",
+       " 'tolist',\n",
+       " 'tostring',\n",
+       " 'trace',\n",
+       " 'transpose',\n",
+       " 'var',\n",
+       " 'view']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
    "metadata": {}
   },
   {
@@ -49,9 +228,41 @@
    "metadata": {}
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "source": [
+    "A=np.ones(100)\r\n",
+    "AA=np.array([1 for index in range(100)])"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "Create a vector with values ranging from 10 to 49"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "source": [
+    "B=np.array([index for index in range(10,50)])"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26,\n",
+       "       27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43,\n",
+       "       44, 45, 46, 47, 48, 49])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
    ],
    "metadata": {}
   },
@@ -63,6 +274,28 @@
    "metadata": {}
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "source": [
+    "C=np.linspace(0,0.8,5)\r\n",
+    "CC= np.arange(0,1,0.2)\r\n",
+    "CC"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([0. , 0.2, 0.4, 0.6, 0.8])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 22
+    }
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "Convert a float array into an integer array in place"
@@ -70,12 +303,59 @@
    "metadata": {}
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "source": [
+    "CC= CC *3\r\n",
+    "D=CC.astype(int)\r\n",
+    "D"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([0, 0, 1, 1, 2])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 25
+    }
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
    "source": [
-    "Given a boolean array\n",
-    "\n",
-    "- return the indices where \n",
+    "Given a boolean array\r\n",
+    "\r\n",
+    "- return the indices where \r\n",
     "- negate the array inplace? "
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "source": [
+    "E=np.random.randint(2, size=10)\r\n",
+    "EE=E.astype(bool)\r\n",
+    "EEE=EE[np.where(EE == False)]\r\n",
+    "\r\n",
+    "EEEE=np.invert(EEE)\r\n",
+    "EEEE\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([ True,  True,  True])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 34
+    }
    ],
    "metadata": {}
   },
@@ -87,6 +367,110 @@
     "- 2 ways to compute the inner product $v^{\\top} u$ (here they must have the same size)\n",
     "- 2 ways to compute the outer product matrix $u v^{\\top}$\n",
     "- 2 ways to compute the outer sum matrix \"$M = u + v^{\\top}$\", where $M_{ij} = u_i + v_j$"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "source": [
+    "A=np.random.randint(0,5, size=10)\r\n",
+    "B=np.random.randint(2, size=10)\r\n",
+    "C=np.vdot(A,B)\r\n",
+    "D=np.outer(A,B)\r\n",
+    "\r\n",
+    "A, B ,C,D"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(array([1, 0, 0, 1, 0, 1, 0, 1, 0, 2]),\n",
+       " array([0, 0, 0, 1, 1, 0, 1, 0, 0, 1]),\n",
+       " 3,\n",
+       " array([[0, 0, 0, 1, 1, 0, 1, 0, 0, 1],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 1, 1, 0, 1, 0, 0, 1],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 1, 1, 0, 1, 0, 0, 1],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 1, 1, 0, 1, 0, 0, 1],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 2, 2, 0, 2, 0, 0, 2]]))"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 46
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "source": [
+    "\r\n",
+    "\r\n",
+    "C=np.array([A]*len(A)).T+B\r\n",
+    "\r\n",
+    "\r\n",
+    "C"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[[1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [2, 2, 2, 2, 2, 2, 2, 2, 2, 2],\n",
+       "        [1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+       "        [1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+       "        [1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+       "        [1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [3, 3, 3, 3, 3, 3, 3, 3, 3, 3]]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 80
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "source": [
+    "A=np.reshape(A,(10,1))\r\n",
+    "B=np.reshape(B,(10,1))\r\n",
+    "C=np.dot(A,B.T)\r\n",
+    "C\r\n",
+    "#np.all(np.diff(bounds)>=0)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, 1, 1, 0, 1, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 1, 1, 0, 1, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 1, 1, 0, 1, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 1, 1, 0, 1, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 2, 2, 0, 2, 0, 0, 2]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 59
+    }
    ],
    "metadata": {}
   },
@@ -118,6 +502,136 @@
     "  - row-wise multiplication of $M$ by $v$ ($M_{i\\cdot}$ is multiplied by $v_i$)\n",
     "  - column-wise multiplication of $M$ by $v$ ($M_{\\cdot j}$ is multiplied by $v_i$)"
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "source": [
+    "M=np.arange(0,9,1)\r\n",
+    "M=np.reshape(M,(3,3))\r\n",
+    "M\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 2],\n",
+       "       [3, 4, 5],\n",
+       "       [6, 7, 8]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 61
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "source": [
+    "M[1][1]\r\n",
+    "M[[0, 1]] = M[[1, 0]]\r\n",
+    "M"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[3, 4, 5],\n",
+       "       [0, 1, 2],\n",
+       "       [6, 7, 8]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 67
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "source": [
+    "M[[0, 1]] = M[[1, 0]]"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "source": [
+    "L=M[1:,1:]\r\n",
+    "L"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[4, 5],\n",
+       "       [7, 8]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 86
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "source": [
+    "np.diag(M)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([0, 4, 8])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 88
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "source": [
+    "M**3"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[  0,   1,   8],\n",
+       "       [ 27,  64, 125],\n",
+       "       [216, 343, 512]], dtype=int32)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 89
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "N=np."
+   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -196,7 +710,7 @@
    "toc_window_display": true
   },
   "interpreter": {
-   "hash": "ba6ca9fc42f42968b7c4e3e70d1a500cae409fe585200fde26f7b418fee309bd"
+   "hash": "21b24bed1a7ec93f276d881e6a011a2b8e69b13d5056febcb6170b84daeb5cde"
   }
  },
  "nbformat": 4,
