--- a/notebooks/lab2.ipynb
+++ b/notebooks/lab2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "%load_ext autoreload\r\n",
+    "%load_ext autoreload\n",
     "%autoreload 2"
    ],
    "outputs": [],
@@ -12,35 +12,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 2,
-   "source": [
-    "import numpy as np\r\n",
-    "from lab2.box_window import BoxWindow\r\n"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "source": [
-    "A=np.array([2,4])\r\n",
-    "box= BoxWindow(A)\r\n",
-    "\r\n",
-    "box.__repr__()\r\n"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "'BoxWindow: 2 x 4'"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 3
-=======
    "execution_count": 93,
    "source": [
     "import numpy as np\n",
@@ -60,26 +31,17 @@
      "text": [
       "\n"
      ]
->>>>>>> 0c15242accca009adc793de993ed878c78c66c5a
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 4,
-   "source": [
-    "box2= BoxWindow(np.array([[0, 5], [0, 5]]))\r\n",
-    "x=np.array([-1, 5])\r\n",
-    "BoxWindow.__contains__(box2, x)"
-=======
    "execution_count": 11,
    "source": [
     "from lab1.functions import is_unique\n",
     "\n",
     "is_unique([1,2,2,3])"
->>>>>>> 0c15242accca009adc793de993ed878c78c66c5a
    ],
    "outputs": [
     {
@@ -90,42 +52,7 @@
       ]
      },
      "metadata": {},
-<<<<<<< HEAD
-     "execution_count": 4
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "source": [
-    "from lab2.box_window import BoxWindow\r\n"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "source": [
-    "BoxWindow.rand(box2, n=5, )"
-   ],
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "TypeError",
-     "evalue": "float() argument must be a string or a number, not 'numpy.random._generator.Generator'",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_15396/1716875573.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mBoxWindow\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrand\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbox2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mc:\\users\\amine\\sdia-python\\src\\lab2\\box_window.py\u001b[0m in \u001b[0;36mrand\u001b[1;34m(self, n, rng)\u001b[0m\n\u001b[0;32m     78\u001b[0m         \u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     79\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbounds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 80\u001b[1;33m             \u001b[0mX\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_random_number_generator\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     81\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     82\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: float() argument must be a string or a number, not 'numpy.random._generator.Generator'"
-     ]
-=======
      "execution_count": 11
->>>>>>> 0c15242accca009adc793de993ed878c78c66c5a
     }
    ],
    "metadata": {}
@@ -150,11 +77,7 @@
    "display_name": "Python 3.8.11 64-bit ('sdia-python': conda)"
   },
   "interpreter": {
-<<<<<<< HEAD
-   "hash": "21b24bed1a7ec93f276d881e6a011a2b8e69b13d5056febcb6170b84daeb5cde"
-=======
    "hash": "f6393793d105c9501c054149556491342f57107460b9941c6625f98ef8f69ab0"
->>>>>>> 0c15242accca009adc793de993ed878c78c66c5a
   }
  },
  "nbformat": 4,
