--- a/notebooks/lab2.ipynb
+++ b/notebooks/lab2.ipynb
@@ -3,82 +3,35 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "source": [
-    "import numpy as np\n",
-    "from lab2.box_window import BoxWindow\n",
-    "\n",
-    "bounds=np.array([[1,2],[2,3]])\n",
-    "\n",
-    "box=BoxWindow(bounds)\n",
-    "print(box.__str__())\n",
-    "\n",
-    "\n"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "source": [
-    "from lab1.functions import is_unique\n",
-    "\n",
-    "is_unique([1,2,2,3])"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 11
-    }
-   ],
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "interpreter": {
+   "hash": "f6393793d105c9501c054149556491342f57107460b9941c6625f98ef8f69ab0"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.11 64-bit ('sdia-python': conda)",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
-   "version": "3.8.11",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.11"
   },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.11 64-bit ('sdia-python': conda)"
-  },
-  "interpreter": {
-   "hash": "f6393793d105c9501c054149556491342f57107460b9941c6625f98ef8f69ab0"
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
