--- a/notebooks/lab1.ipynb
+++ b/notebooks/lab1.ipynb
@@ -1092,8 +1092,8 @@
    "source": [
     "## Functions\n",
     "\n",
-    "- Create your function in `src/lab1/functions.py` files\n",
-    "- Import them using `from lab1.functions import MYFUNCTION`"
+    "- Create your function in `src/sdia_python/lab1/functions.py` files\n",
+    "- Import them using `from sdia_python.lab1.functions import MYFUNCTION`"
    ]
   },
   {
@@ -1120,7 +1120,7 @@
     }
    ],
    "source": [
-    "from lab1.functions import is_unique\n",
+    "from sdia_python.lab1.functions import is_unique\n",
     "\n",
     "\n",
     "is_unique([1,2,3,4]) , is_unique([1,1,2,3,4])\n",
@@ -1205,7 +1205,7 @@
     }
    ],
    "source": [
-    "from lab1.functions import triangle_shape\n",
+    "from sdia_python.lab1.functions import triangle_shape\n",
     "\n",
     "triangle_shape(4)"
    ]
